[package]
name = "ActixWebTaskService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
aws-config = "1.5.3"
aws-sdk-dynamodb = { version = "1.36.0", features = ["behavior-version-latest"] }
env_logger = "0.11.3"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
uuid = { version = "1.9.1", features = ["v4"] }
